# TODO: Add license info

[package]
name = "icu4x-js-regexp"
version = "0.1.0"
authors = ["Iain Ireland <iireland@mozilla.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
icu_provider = { git = "https://github.com/iainireland/icu4x.git", rev = "3f0c312a53807e95c3dc2dea5fae012fceffffba" }
icu_provider_blob = { git = "https://github.com/iainireland/icu4x.git", rev = "3f0c312a53807e95c3dc2dea5fae012fceffffba", features = ["export"] }
icu_provider_uprops = { git = "https://github.com/iainireland/icu4x.git", rev = "3f0c312a53807e95c3dc2dea5fae012fceffffba" }
icu_uniset = { git = "https://github.com/iainireland/icu4x.git", rev = "3f0c312a53807e95c3dc2dea5fae012fceffffba" }
