# This file is licensed under the same terms as ICU4X.
# For details, please see the LICENSE file.

[package]
name = "icu4x_js_regexp"
version = "0.1.0"
authors = ["Iain Ireland <iireland@mozilla.com>"]
edition = "2018"
license-file = "LICENSE"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
icu_provider = { git = "https://github.com/unicode-org/icu4x.git" }
icu_provider_blob = { git = "https://github.com/unicode-org/icu4x.git" }
icu_uniset = { git = "https://github.com/unicode-org/icu4x.git" }

[build-dependencies]
icu_provider = { git = "https://github.com/unicode-org/icu4x.git" }
icu_provider_blob = { git = "https://github.com/unicode-org/icu4x.git", features = ["export"] }
icu_provider_uprops = { git = "https://github.com/unicode-org/icu4x.git" }
icu_uniset = { git = "https://github.com/unicode-org/icu4x.git" }
